--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <script src="js/main.js"></script>
 </head>
 <body>
-    
+    <div class="loader">
+
+
+        <div></div>
+        <div></div>
+
+    </div>
 </body>
 </html>
